Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateParameter.ru
/? Descripción: caso de prueba que verifica que no se pasen como parametro
/? dos variables con el mismo nombre
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 11 | COLUMNA 19 | EL PARAMETRO a YA ESTÁ DECLARADO EN ESTE ALCANCE

struct B{}
impl B{
.(){}
fn m1(Char a, Int a) -> Bool{}}
start{}